lib/src/bindings.dart


  /// Sets the additional info about the recording.<br>
  /// This function is optional and can be called only after opening a file in writemode and<br>
  /// before the first sample write action.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] recording_additional
  /// A pointer to a NULL-terminated ASCII-string containing the additional info about the recording.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_recording_additional(
    int handle,
    ffi.Pointer<ffi.Char> recording_additional,
  ) {
    return _set_recording_additional(
      handle,
      recording_additional,
    );
  }

  late final _set_recording_additionalPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_recording_additional');
  late final _set_recording_additional = _set_recording_additionalPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  /// Writes n physical samples (uV, mA, Ohm) from \p buf belonging to one signal<br>
  /// where n is the samplefrequency of that signal.<br>
  /// Actually, n equals the number of samples per datarecord which equals the samplefrequency only<br>
  /// when the datarecord duration has the default value of one second!<br>
  /// The physical samples will be converted to digital samples using the<br>
  /// values of physical maximum, physical minimum, digital maximum and digital minimum.<br>
  /// Size of \p buf must be equal to or bigger than sizeof(double[samples per datarecord]).<br>
  /// Call this function for every signal in the file. The order is important:<br>
  /// When there are 4 signals in the file,  the order of calling this function<br>
  /// must be: signal 0, signal 1, signal 2, signal 3, signal 0, signal 1, signal 2, etc.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] buf
  /// A pointer to a buffer containing the samples.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int write_physical_samples(
    int handle,
    ffi.Pointer<ffi.Double> buf,
  ) {
    return _write_physical_samples(
      handle,
      buf,
    );
  }

  late final _write_physical_samplesPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Double>)>>(
      'edfwrite_physical_samples');
  late final _write_physical_samples = _write_physical_samplesPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Double>)>();

  /// Writes physical samples (uV, mA, Ohm) from \p buf <br>
  /// \p buf must be filled with samples from all signals, starting with n samples of signal 0, n samples of signal 1, n samples of signal 2, etc.<br>
  /// where n is the samplefrequency of that signal.<br>
  /// Actually, n equals the number of samples per datarecord which equals the samplefrequency only<br>
  /// when the datarecord duration has the default value of one second!<br>
  /// The physical samples will be converted to digital samples using the<br>
  /// values of physical maximum, physical minimum, digital maximum and digital minimum.<br>
  /// The number of samples written equals the sum of the samples per datarecord of all signals.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] buf
  /// A pointer to a buffer containing the samples.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int blockwrite_physical_samples(
    int handle,
    ffi.Pointer<ffi.Double> buf,
  ) {
    return _blockwrite_physical_samples(
      handle,
      buf,
    );
  }

  late final _blockwrite_physical_samplesPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Double>)>>(
      'edf_blockwrite_physical_samples');
  late final _blockwrite_physical_samples = _blockwrite_physical_samplesPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Double>)>();

  /// Writes n "raw" digital samples from \p buf belonging to one signal<br>
  /// where n is the samplefrequency of that signal.<br>
  /// Actually, n equals the number of samples per datarecord which equals the samplefrequency only<br>
  /// when the datarecord duration has the default value of one second!<br>
  /// Size of \p buf should be equal to or bigger than sizeof(short[samples per datarecord]).<br>
  /// Call this function for every signal in the file. The order is important:<br>
  /// When there are 4 signals in the file,  the order of calling this function<br>
  /// must be: signal 0, signal 1, signal 2, signal 3, signal 0, signal 1, signal 2, etc.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] buf
  /// A pointer to a buffer containing the samples.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int write_digital_short_samples(
    int handle,
    ffi.Pointer<ffi.Short> buf,
  ) {
    return _write_digital_short_samples(
      handle,
      buf,
    );
  }

  late final _write_digital_short_samplesPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Short>)>>(
      'edfwrite_digital_short_samples');
  late final _write_digital_short_samples = _write_digital_short_samplesPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Short>)>();

  /// Writes n "raw" digital samples from \p buf belonging to one signal<br>
  /// where n is the samplefrequency of that signal.<br>
  /// Actually, n equals the number of samples per datarecord which equals the samplefrequency only<br>
  /// when the datarecord duration has the default value of one second!<br>
  /// The 16 (or 24 in case of BDF+) least significant bits of the samples will be written to the<br>
  /// file without any conversion.<br>
  /// Size of \p buf should be equal to or bigger than sizeof(int[samples per datarecord]).<br>
  /// Call this function for every signal in the file. The order is important:<br>
  /// When there are 4 signals in the file,  the order of calling this function<br>
  /// must be: signal 0, signal 1, signal 2, signal 3, signal 0, signal 1, signal 2, etc.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] buf
  /// A pointer to a buffer containing the samples.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int write_digital_samples(
    int handle,
    ffi.Pointer<ffi.Int> buf,
  ) {
    return _write_digital_samples(
      handle,
      buf,
    );
  }

  late final _write_digital_samplesPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Int>)>>(
      'edfwrite_digital_samples');
  late final _write_digital_samples = _write_digital_samplesPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int>)>();

  /// Writes "raw" digital samples from \p buf <br>
  /// \p buf must be filled with samples from all signals, starting with n samples of signal 0, n samples of signal 1, n samples of signal 2, etc.<br>
  /// where n is the samplefrequency of that signal.<br>
  /// Actually, n equals the number of samples per datarecord which equals the samplefrequency only<br>
  /// when the datarecord duration has the default value of one second!<br>
  /// One sample equals 3 bytes, order is little endian (least significant byte first).<br>
  /// Encoding is second's complement, most significant bit of most significant byte is the sign-bit.<br>
  /// Because the size of a 3-byte sample is 24-bit, this function can only be used when writing a BDF+ file.<br>
  /// The number of samples written equals the sum of the samples per datarecord of all signals.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] buf
  /// A pointer to a buffer containing the samples.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int blockwrite_digital_3byte_samples(
    int handle,
    ffi.Pointer<ffi.Void> buf,
  ) {
    return _blockwrite_digital_3byte_samples(
      handle,
      buf,
    );
  }

  late final _blockwrite_digital_3byte_samplesPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Void>)>>(
      'edf_blockwrite_digital_3byte_samples');
  late final _blockwrite_digital_3byte_samples =
      _blockwrite_digital_3byte_samplesPtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Void>)>();

  /// Writes "raw" digital samples from \p buf <br>
  /// \p buf must be filled with samples from all signals, starting with n samples of signal 0, n samples of signal 1, n samples of signal 2, etc.<br>
  /// where n is the samplefrequency of that signal.<br>
  /// Actually, n equals the number of samples per datarecord which equals the samplefrequency only<br>
  /// when the datarecord duration has the default value of one second!<br>
  /// One sample equals 2 bytes, order is little endian (least significant byte first).<br>
  /// Encoding is second's complement, most significant bit of most significant byte is the sign-bit.<br>
  /// Because the size of a 2-byte sample is 16-bit, this function can only be used when writing an EDF+ file.<br>
  /// The number of samples written equals the sum of the samples per datarecord of all signals.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] buf
  /// A pointer to a buffer containing the samples.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int blockwrite_digital_short_samples(
    int handle,
    ffi.Pointer<ffi.Short> buf,
  ) {
    return _blockwrite_digital_short_samples(
      handle,
      buf,
    );
  }

  late final _blockwrite_digital_short_samplesPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Short>)>>(
      'edf_blockwrite_digital_short_samples');
  late final _blockwrite_digital_short_samples =
      _blockwrite_digital_short_samplesPtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Short>)>();

  /// Writes "raw" digital samples from \p buf <br>
  /// \p buf must be filled with samples from all signals, starting with n samples of signal 0, n samples of signal 1, n samples of signal 2, etc.<br>
  /// where n is the samplefrequency of that signal.<br>
  /// Actually, n equals the number of samples per datarecord which equals the samplefrequency only<br>
  /// when the datarecord duration has the default value of one second!<br>
  /// The 16 (or 24 in case of BDF+) least significant bits of the samples will be written to the<br>
  /// file without any conversion.<br>
  /// The number of samples written equals the sum of the samples per datarecord of all signals.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] buf
  /// A pointer to a buffer containing the samples.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int blockwrite_digital_samples(
    int handle,
    ffi.Pointer<ffi.Int> buf,
  ) {
    return _blockwrite_digital_samples(
      handle,
      buf,
    );
  }

  late final _blockwrite_digital_samplesPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Int>)>>(
      'edf_blockwrite_digital_samples');
  late final _blockwrite_digital_samples = _blockwrite_digital_samplesPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int>)>();

  /// Writes an annotation/event to the file.<br>
  /// This function is optional and can be called only after opening a file in writemode<br>
  /// and before closing the file.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] onset
  /// microseconds since start of recording.
  ///
  /// @param[in] duration
  /// microseconds, > 0 or -1 if not used.
  ///
  /// @param[in] description
  /// A null-terminated UTF8-string containing the text that describes the event.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int write_annotation_utf8_hr(
    int handle,
    int onset,
    int duration,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _write_annotation_utf8_hr(
      handle,
      onset,
      duration,
      description,
    );
  }
